--- a/src/app/comparateur/comparateur.component.scss
+++ b/src/app/comparateur/comparateur.component.scss
@@ -40,3 +40,17 @@ ion-chip {
 ion-chip {
 	color: white;
 }
+
+.notFoundBox {
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: center;
+}
+
+.notFoundIcon {
+	height: 50px;
+	width: 50px;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+}
