✨ add results page && some refactors && add btn compare

--- a/src/app/comparateur/select/select.component.html
+++ b/src/app/comparateur/select/select.component.html
@@ -39,4 +39,7 @@
 			</ng-container>
 		</ion-row>
 	</ion-grid>
+	<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+		<ion-button (click)="goToResult()" class="btnCompare">Comparer</ion-button>
+	</ion-fab>
 </ion-content>
