--- a/src/app/comparateur/select/select.component.scss
+++ b/src/app/comparateur/select/select.component.scss
@@ -1,4 +1,4 @@
-@import '../../theme/colors.scss';
+@import '../../../theme/colors.scss';
 
 ion-label {
 	font-weight: 600;
@@ -53,4 +53,10 @@ ion-chip {
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
+}
+
+.btnCompare {
+	box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	font-weight: 600;
 }
