--- a/src/global.scss
+++ b/src/global.scss
@@ -26,6 +26,7 @@
 @import '~@ionic/angular/css/flex-utils.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import './theme/colors.scss';
 
 * {
 	font-family: 'Lato', sans-serif;
@@ -39,4 +40,8 @@ h5 {
 	font-family: 'Poppins', sans-serif;
 	font-weight: 900;
 	margin-top: 5px;
+}
+
+.button-native {
+	background-color: $main;
 }
